--- a/storingArraylistInRoom/src/main/res/layout/activity_main.xml
+++ b/storingArraylistInRoom/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
 
         <EditText
             android:id="@+id/inputName"
-            android:hint="Enter gf name!"
+            android:hint="Enter pet name!"
             android:layout_gravity="center"
             android:layout_width="200dp"
             android:layout_height="wrap_content" />
